docs: improve swagger doc
