# src/infra/controllers/auth.controller.ts
@@ -14,10 +14,10 @@ export class AuthController {
 
       return res.json({ token });
     } catch (error: any) {
-      if (
-        error.mesaage === "User not found" ||
-        error.message === "Password does not match"
-      ) {
+      if (error.message === "Password does not match") {
+        return res.status(409).json({ message: error.message });
+      }
+      if (error.message === "User not found") {
         return res.status(404).json({ message: error.message });
       }
       return res.status(500).json({ message: error.message });
