# src/swagger.json
@@ -16,6 +16,51 @@
     }
   ],
   "paths": {
+    "/login": {
+      "post": {
+        "summary": "Login",
+        "description": "Login de usuário",
+        "tags": [
+          "Auth"
+        ],
+        "parameters": [
+          {
+            "name": "email",
+            "in": "body",
+            "description": "Email do usuário",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "body",
+            "description": "Senha do usuário",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "headers": {
+              "token": {
+                "type": "string",
+                "description": "Token de autenticação"
+              }
+            }
+          },
+          "404": {
+            "description": "User not found"
+          },
+          "500": {
+            "description": "Erro interno do servidor"
+          },
+          "409": {
+            "description": "Password does not match"
+          }
+        }
+      }
+    },
     "/users": {
       "post": {
         "summary": "Cadastro de usuário",
@@ -94,6 +139,7 @@
             "content": {
               "application/json": {
                 "schema": {
+                  "type": "array",
                   "$ref": "#/components/schemas/Event"
                 }
               }
